--- a/style.css
+++ b/style.css
@@ -30,3 +30,17 @@ body {
     align-items: center;
 }
 
+button {
+    cursor: pointer;
+}
+
+.add-todo-btn {
+    background-color: var(--blue);
+    color: var(--white);
+    border-radius: 4px;
+    border: none;
+    font-size: 1.1rem;
+    padding: 8px 16px;
+    position: absolute;
+}
+
