--- a/style.css
+++ b/style.css
@@ -30,10 +30,34 @@ body {
     align-items: center;
 }
 
+/* The whole To Do list container */
+.todo-container {
+    background-color: var(--white);
+    /* padding: 20px 120px 200px 120px; */
+    height: 60%;
+    width: 60%;
+    max-width: 30rem;
+    padding: 3rem;
+    border-radius: 1.4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* heading  */
+h2 {
+    height: 3rem;
+    color: var(--dark);
+    text-transform: uppercase;
+    text-align: center;
+}
+
 button {
     cursor: pointer;
 }
 
+/* idk how these two work but i will figure it out */
+/* TODO : know more about these position: relative && absolute properties */
 .add-todo-btn {
     background-color: var(--blue);
     color: var(--white);
@@ -42,5 +66,19 @@ button {
     font-size: 1.1rem;
     padding: 8px 16px;
     position: absolute;
+    right: 0.5rem;
+    bottom: 0.8rem;
 }
 
+.input {
+    position: relative;
+    display: flex;
+}
+
+.input-field {
+    font-size: 1.1rem;
+    width: 100%;
+    padding: 1.25rem;
+    border: 0.06rem solid #d2d2d2bf;
+    border-radius: 0.4rem;
+}
