--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ button {
     bottom: 0.8rem;
 }
 
-.input {
+/* Main input container */
+.input-container {
     position: relative;
     display: flex;
 }
@@ -81,4 +82,9 @@ button {
     padding: 1.25rem;
     border: 0.06rem solid #d2d2d2bf;
     border-radius: 0.4rem;
+}
+
+/* To change placeholder text color */
+input[type="text"]::placeholder {
+    color: var(--grey);
 }
