--- a/style.css
+++ b/style.css
@@ -116,3 +116,32 @@ li {
     display: flex;
     text-decoration: line-through;
 }
+
+.counter {
+    border: 0.06rem solid var(--grey-light);
+}
+
+.counter-container {
+    height: 2rem;
+    display: flex;
+    justify-content: space-between;
+    margin: 1.0rem;
+    /* padding:rem; */
+}
+
+.counter-container button {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    background-color: transparent;
+    color: var(--grey);
+    border-radius: 4px;
+    border: none;
+    font-size: 1rem;
+    padding: 8px 16px;
+}
+
+.counter-container p {
+    align-self: center;
+    color: var(--grey);
+}
